# gkLab

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/src/: lab1.tex  lab2.tex  lab3_4.tex  lab5.tex  main.tex
include/: Color.hpp  DrawingUtils.hpp  Light.hpp  Material.hpp  NumericUtils.hpp  Point.hpp  Texture.hpp  XD.hpp
include/ViewEngine/: IView.hpp  ViewEngine.hpp
include/models/: Egg.hpp  TexModel.hpp
include/views/: ComplexEggView.hpp  DotEggView.hpp  MeshEggView.hpp  TeapotView.hpp  TexModelView.hpp  TrianglesEggView.hpp
src/: Color.cpp  DrawingUtils.cpp  Light.cpp  Material.cpp  NumericUtils.cpp  Point.cpp  Texture.cpp  XD.cpp  main.cpp
src/ViewEngine/: ViewEngine.cpp
src/models/: Egg.cpp  TexModel.cpp
src/textures/: paput.tga  zoltek.tga  zoltek_smol.tga  zoltek_smol_very.tga
src/views/: ComplexEggView.cpp  DotEggView.cpp  MeshEggView.cpp  TeapotView.cpp  TexModelView.cpp  TrianglesEggView.cpp
